--- a/tugas3/orthographic-perspective-camera/index.html
+++ b/tugas3/orthographic-perspective-camera/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WebGL 3D Textured Cube with Lighting and Camera Controls</title>
+    <title>WebGL 3D Fahmi - Orthographic Perspective Camera</title>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
       integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
